--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
   "name": "@mechanic-mo/react-components",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "npm run clean && tsc && cp package.json README.md ./dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module commonjs --outDir lib/cjs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mechanicMo/react-components.git"
-  },
+  "repository": "git+https://github.com/mechanicMo/react-components.git",
   "keywords": [],
-  "author": "",
+  "author": "Mo Ramchandani <mohitr35@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mechanicMo/react-components/issues"
   },
   "homepage": "https://github.com/mechanicMo/react-components#readme",
   "devDependencies": {
+    "@react-spring/web": "^9.0.0",
     "@types/react": "^18.0.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.7.4"
   },
-  "dependencies": {
-    "@react-spring/web": "^9.5.1"
-  }
+  "peerDependencies": {
+    "@react-spring/web": "^9.0.0",
+    "react": "^17.0.2"
+  },
+  "main": "./lib/cjs/index.js",
+  "module": "./lib/esm/index.js",
+  "types": "./lib/esm/index.d.ts",
+  "files": [
+    "/lib"
+  ]
 }
