--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@mechanic-mo/react-components",
-  "version": "1.0.1",
+  "version": "1.0.9",
   "description": "",
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir lib/cjs",
-    "lint": "eslint ./src/*",
+    "build": "rollup -c",
+    "lint": "eslint ./src/*.tsx",
     "lint:fix": "eslint ./src/* --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
@@ -20,6 +18,9 @@
   "homepage": "https://github.com/mechanicMo/react-components#readme",
   "devDependencies": {
     "@react-spring/web": "^9.0.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
@@ -33,19 +34,25 @@
     "react-dom": "^17.0.2",
     "react-use-measure": "^2.1.1",
     "react": "^17.0.2",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "rollup": "^2.77.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "@react-spring/web": "^9.0.0",
-    "react-use-measure": "^2.1.1",
-    "react": "^17.0.2",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
     "tailwindcss": "^3.1.6"
   },
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
-  "types": "./lib/esm/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "/lib"
+    "dist"
   ]
 }
