--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src/*"],
+  "include": ["src/*", "src/Table/Table.tsx"],
   "exclude": [
     "node_modules",
     "dist",
