--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@mechanic-mo/react-components",
-  "version": "1.0.20",
+  "version": "1.0.24",
   "description": "",
   "scripts": {
     "build": "rollup -c",
-    "lint": "eslint ./src/*.tsx",
-    "lint:fix": "eslint ./src/* --fix",
+    "lint": "eslint ./src/*.tsx ./src/**/*.tsx",
+    "lint:fix": "eslint ./src/*.tsx ./src/**/*.tsx --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "repository": "git+https://github.com/mechanicMo/react-components.git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mechanicMo/react-components#readme",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.9",
     "@react-spring/web": "^9.0.0",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -25,21 +26,30 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-xo": "^0.41.0",
+    "eslint-plugin-ava": "^13.2.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unicorn": "^43.0.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-use-measure": "^2.1.1",
-    "react": "^17.0.2",
+    "rollup": "^2.77.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
-    "rollup": "^2.77.0",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
