--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "semi": true,
-  "tabWidth": 4,
-  "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "none",
-  "jsxBracketSameLine": true
+  "useTabs": false,
+  "bracketSpacing": true,
+  "trailingComma": "all",
+  "tabWidth": 4,
+  "overrides": [
+    { "files": "*.yml", "options": { "tabWidth": 2 } },
+    { "files": "*.json", "options": { "tabWidth": 2 } }
+  ]
 }
