smarter tailwind config; split table into many files; wip: table component; utility functions

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@mechanic-mo/react-components",
-  "version": "1.0.24",
+  "version": "1.1.34",
   "description": "",
   "scripts": {
-    "build": "rollup -c",
+    "build": "yarn build:styles && rollup -c",
+    "build:styles": "postcss src/styles/tailwind.css -o src/styles/main.css",
     "lint": "eslint ./src/*.tsx ./src/**/*.tsx",
     "lint:fix": "eslint ./src/*.tsx ./src/**/*.tsx --fix",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
@@ -17,7 +18,6 @@
   },
   "homepage": "https://github.com/mechanicMo/react-components#readme",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
     "@react-spring/web": "^9.0.0",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -28,20 +28,16 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-xo": "^0.41.0",
-    "eslint-plugin-ava": "^13.2.0",
-    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
     "prettier": "^2.7.1",
-    "react": "^17.0.2",
+    "react": "^18.0.15",
     "react-dom": "^17.0.2",
     "react-use-measure": "^2.1.1",
     "rollup": "^2.77.0",
@@ -50,6 +46,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
+    "tailwind-merge": "^1.5.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
@@ -57,6 +54,7 @@
     "@react-spring/web": "^9.0.0",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0",
+    "tailwind-merge": "^1.5.1",
     "tailwindcss": "^3.1.6"
   },
   "main": "dist/cjs/index.js",
