--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,21 @@
 {
     "env": {
         "browser": true,
-        "cypress/globals": true,
         "es2021": true,
-        "es6": true,
-        "jest": true,
         "node": true
     },
     "extends": [
         "eslint:recommended", 
         "plugin:@typescript-eslint/recommended",
-        "plugin:ava/recommended",
         "plugin:eslint-comments/recommended",
-        "plugin:node/recommended",
         "plugin:prettier/recommended",
         "plugin:promise/recommended",
         "plugin:react-hooks/recommended",
         "plugin:react/recommended", 
-        "plugin:unicorn/recommended",
-        "xo"
+        "plugin:unicorn/recommended"
     ],
     "plugins": [
         "@typescript-eslint", 
-        "cypress",
-        "import", 
         "prettier",
         "react-hooks",
         "react"
@@ -31,47 +23,20 @@
     "rules": {
         "@typescript-eslint/no-redeclare": ["error"],
         "@typescript-eslint/no-useless-constructor": ["error"],
-        "ava/no-import-test-files": "off",
-        "ava/no-todo-test": "off",
         "capitalized-comments": "off",
         "eslint-comments/disable-enable-pair": ["error",{ "allowWholeFile": true }],
         "eslint-comments/no-unused-disable": "off",
-        "import/default": "error",
-        "import/export": "error",
-        "import/extensions": ["error",{ "js": "never", "jsx": "never", "json": "always" }],
-        "import/namespace": ["error", { "allowComputed": true }],
-        "import/no-absolute-path": "error",
-        "import/no-amd": "error",
-        "import/no-duplicates": "error",
-        "import/no-extraneous-dependencies": ["error",{"devDependencies": ["test/**/*.js","e2e-tests/**/*.js","test/**/*.ts","e2e-tests/**/*.ts"]}],
-        "import/no-mutable-exports": "error",
-        "import/no-named-as-default-member": "error",
-        "import/no-named-as-default": "error",
-        "import/no-self-import": "error",
-        "import/no-unassigned-import": "error",
-        "import/no-unresolved": "error",
-        "import/no-unused-modules": "error",
-        "import/no-useless-path-segments": ["error", { "noUselessIndex": true }],
-        "import/no-webpack-loader-syntax": "error",
-        "import/order": "error",
         "no-await-in-loop": "off",
         "no-process-exit": "off",
         "no-redeclare": "off",
         "no-useless-constructor": "off",
         "no-var": "error",
         "no-warning-comments": "off",
-        "node/no-extraneous-import": "off",
-        "node/no-extraneous-require": "off",
-        "node/no-missing-import": "off",
-        "node/no-unpublished-import": "off",
-        "node/no-unpublished-require": "off",
-        "node/no-unsupported-features/es-syntax": "off",
-        "node/shebang": "off",
         "promise/prefer-await-to-callbacks": "error",
         "promise/prefer-await-to-then": "error",
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
-        "require-atomic-updates": "off",
+        "unicorn/no-null": "off",
         "unicorn/prevent-abbreviations": "off"
     },
     "parser": "@typescript-eslint/parser",
@@ -97,8 +62,7 @@
             "extends": [
                 "eslint:recommended",
                 "plugin:react/recommended",
-                "plugin:react-hooks/recommended",
-                "plugin:cypress/recommended"
+                "plugin:react-hooks/recommended"
             ],
             "rules": {
                 "prettier/prettier": "error",
@@ -117,7 +81,6 @@
                 "eslint:recommended",
                 "plugin:react/recommended",
                 "plugin:react-hooks/recommended",
-                "plugin:cypress/recommended",
                 "plugin:@typescript-eslint/recommended"
             ],
             "rules": {
