--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "declaration": true,
     "declarationDir": "dist",
     "module": "esnext",
-    "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "target": "es6",
+    "lib": ["es6", "dom", "dom.iterable", "es2016", "es2017"],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "downlevelIteration": true
   },
-  "include": ["src/*", "src/Table/Table.tsx"],
+  "include": ["src/*", "src/**/*"],
   "exclude": [
     "node_modules",
     "dist",
